# chatterbox

./: .gitignore  .gitmodules  .markdownlint.jsonc  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  README.md
.devcontainer/: devcontainer.json  gethnfo.sh  netcreate.sh
.devcontainer/dockerfiles/chatterbox/: Dockerfile  bashrc.patch  hnfo  puthnfo.sh
.github/workflows/: build-builder.yaml  build-chatterbox.yaml  lint.yaml
charts/chatterbox/: Chart.yaml  values.yaml
charts/chatterbox/templates/: NOTES.txt  _helpers.tpl  chart-validation.yaml  deployment.yaml  ingress-traefik.yaml  service.yaml
chatterbox/: CMakeLists.txt  chatterbox.cpp  chatterbox.h  globals.h  jsenv.cpp  jsenv.h  main.cpp  scenario.cpp  utils.cpp
docs/: build.md  usage.md
examples/: ids.yaml  scenario-1.js  scenario-1.json  scenario-1.yaml
examples/endpoint/: endp-ping.js  endp-ping.yaml
examples/s3/basic/: chown_bucket.json  delete_bucket.json  get_bucket_info.json  get_info.json  link_bucket.json  put_bucket.json  put_stat_bucket.json  put_user.json  stat_bucket.json
examples/s3/scripted/: test.js  test_include.js  test_scripted.json
scripts/: Dockerfile-leap.builder  Dockerfile-ubuntu.builder  Dockerfile.build-opensuse  Dockerfile.builder  Dockerfile.builder-opensuse  Dockerfile.chatterbox  Dockerfile.chatterbox-opensuse  Dockerfile.chatterbox-test  Dockerfile.leap.builder  Dockerfile.leap.test  Dockerfile.ubuntu.builder  Dockerfile.ubuntu.test  build.sh  chatterbox.sh  contrib_init.sh
scripts/rapidyaml-build/: CMakeLists.txt
src/: .astylerc  CMakeLists.txt  cbox.cpp  cbox.h  chatterbox.cpp  chatterbox.h  conversation.cpp  conversation.h  crypto.cpp  crypto.h  endpoint.cpp  endpoint.h  globals.h  jsenv.cpp  jsenv.h  main.cpp  request.cpp  request.h  scenario.cpp  scenario.h  utils.cpp  utils.h
test/: .astylerc  CMakeLists.txt  test.cpp  test.h
test/scenarios/: 0_malformed.json  1_head1conv1req.json
ui/chatterbox/: README.md  angular.json  package-lock.json  package.json
ui/chatterbox/src/: index.html
ui/chatterbox/src/app/: app.component.html  app.component.spec.ts  app.component.ts
